fix: :ambulance: fix update item name and status
